--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   delightful_toast: ^1.1.0
   flutter_screenutil: ^5.9.3
   line_icons: ^2.0.3
+  html: ^0.15.6
 
 dev_dependencies:
   flutter_test:
