--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   line_icons: ^2.0.3
   html: ^0.15.6
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
