--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   line_icons: ^2.0.3
   html: ^0.15.6
   cached_network_image: ^3.4.1
+  flutter_staggered_grid_view: ^0.7.0
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
