--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_staggered_grid_view: ^0.7.0
   skeletonizer: ^2.1.0+1
+  photo_view: ^0.15.0
+  intl: ^0.20.2
+  url_launcher: ^6.3.2
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
