--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   intl: ^0.20.2
   url_launcher: ^6.3.2
   get_storage: ^2.1.1
+  salomon_bottom_bar: ^3.3.2
+  lazy_load_indexed_stack: ^1.2.1
 
 dev_dependencies:
   flutter_test:
