--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   easy_refresh: ^3.4.0
   flutter_cache_manager: ^3.4.1
   crypto: ^3.0.7
+  carousel_slider: ^5.1.1
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
